deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: home-work-deployment
spec:
    replicas: 2
    selector:
        matchLabels:
            app: home-work-app
    template:
        metadata:
            labels:
                app: home-work-app
        spec:
            containers:
            - name: home-work
              image: romashkoroman/otus_home_work:homework1
              ports:
              - name: web
                containerPort: 80
