service.yaml
apiVersion: v1
kind: Service
metadata:
    name: home-work-service
spec:
    selector:
        app: home-work-app
    ports:
    - protocol: TCP
      port: 8000
      targetPort: web
    type: NodePort
