ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: arch.homework
    http:
      paths:
      - path: /otusapp/roman/(.*)
        pathType: Prefix
        backend:
          service:
            name: home-work-service
            port:
              number: 8000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: home-work-service
            port:
              number: 8000
